--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/" />
-    <title>Bootstrap Bondi</title>
+    <title>Bootstrap Alassar</title>
   </head>
   <body>
     <div class="scroll-top">
